Fix particles on safari, working on venue/footer

--- a/app/assets/stylesheets/scss/_base.page.scss
+++ b/app/assets/stylesheets/scss/_base.page.scss
@@ -3,7 +3,7 @@
 
 $content: '{ "particleCount" : 50 }';
 
-.variables-metadata:before {
+.variables-metadata::before {
   content: $content;
 }
 
@@ -12,7 +12,7 @@ head { font-family: $content; }
 @include media-query(start) {
   $content: '{ "particleCount" : 100 }';
 
-  .variables-metadata:before {
+  .variables-metadata::before {
     content: $content;
   }
 
@@ -22,7 +22,7 @@ head { font-family: $content; }
 @include media-query(small) {
   $content: '{ "particleCount" : 150 }';
 
-  .variables-metadata:before {
+  .variables-metadata::before {
     content: $content;
   }
 
@@ -32,7 +32,7 @@ head { font-family: $content; }
 @include media-query(large) {
   $content: '{ "particleCount" : 250 }';
 
-  .variables-metadata:before {
+  .variables-metadata::before {
     content: $content;
   }
 
